--- a/shooting/shooting/shooting.vcxproj
+++ b/shooting/shooting/shooting.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="CharaBase.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameMain.cpp" />
+    <ClCompile Include="HpPotion.cpp" />
+    <ClCompile Include="ItemBase.cpp" />
     <ClCompile Include="KeyManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="player.cpp" />
@@ -168,6 +170,7 @@
     <ClInclude Include="CharaBase.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameMain.h" />
+    <ClInclude Include="HpPotion.h" />
     <ClInclude Include="ItemBase.h" />
     <ClInclude Include="KeyManager.h" />
     <ClInclude Include="player.h" />
