--- a/shooting/shooting/shooting.vcxproj.filters
+++ b/shooting/shooting/shooting.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClInclude Include="EneBullet.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="shooting.rc">
