--- a/shooting/shooting/shooting.vcxproj
+++ b/shooting/shooting/shooting.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="AbstractScene.h" />
     <ClInclude Include="BulletBase.h" />
     <ClInclude Include="CharaBase.h" />
+    <ClInclude Include="common.h" />
     <ClInclude Include="EneBullet.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameMain.h" />
